k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-delivery-admin
  namespace: food-delivery
  labels:
    app: food-delivery-admin
spec:
  type: ClusterIP
  selector:
    app: food-delivery-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
